# ESG_analysis

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.org  TODO.org  database.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api/: .env.example  Dockerfile  Dockerfile.test  Dockerfile.view  Makefile  docker-compose.test.yaml  docker-compose.yaml  main.py  openapi.json  pyproject.toml  requirements.txt  shemes.py  test_scripts.sql  tox.ini
api/app/: bank_parser.py  load_data.py  main.py  settings.py  shemes.py  utils.py  view_main.py
api/app/database/: __init__.py  alembic.ini  bank.py  model.py  session.py  session_manager.py  source.py  text.py  text_result.py  text_sentence.py
api/app/database/alembic/: env.py
api/app/database/alembic/versions/: 2022-10-11_f5727821a974_.py  2022-10-25_e3b13b49a5ac_add_is_processed.py  2022-11-09_3a79a22b07ba_.py  2022-11-10_bbe02e3aceee_.py  2022-11-11_81d4e0456e95_.py  2022-11-23_909be6493aeb_.py  2023-01-26_df093a18dfdd_.py  2023-02-13_cab5f2d71e76_.py  2023-03-04_fdf4c2482f38_.py  2023-03-17_cf997157f3c9_.py
api/app/database/models/: __init__.py  bank.py  base.py  model.py  source.py  text.py  text_result.py  text_sentence.py
api/app/database/models/views/: __init__.py  aggregate_table_model_result.py  text_sentence_count.py
api/app/dataloader/: __init__.py  bank_parser.py  base_parser.py  broker_parser.py  insurance_parser.py  mfo_parser.py
api/app/query/: bank.py  model.py  source.py  text.py  text_result.py  views.py
api/app/router/: bank.py  model.py  source.py  text.py  text_result.py  views.py
api/app/schemes/: bank.py  bank_types.py  mdf_models.py  model.py  source.py  sourcе.py  text.py  views.py
api/app/shemes/: source.py
api/app/tasks/: aggregate_database_model_result.py  transform_texts.py
api/app/views/: __init__.py  aggregate_database_model_result.py  count_sentences_per_month.py  update_indexes_aggregate_database_model_result.py
api/cassettes/: get_cbr_bank_file.yaml  get_cbr_bank_page.yaml
api/database/: __init__.py  bank.py  base.py  model.py  source.py  text.py  text_result.py  text_sentence.py
api/db/: database.py  sourse.py  text_model.py  text_results.py
api/models/: EthicsSentimentModelLoader.ipynb  model_workflow.py
api/requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
api/router/: model.py  sources.py  text.py  text_result.py
api/tests/: conftest.py  test__api_source.py  test_api_bank.py  test_api_model.py  test_api_source.py  test_api_text.py  test_api_text_result.py  test_cbr_parser.py
api/tests/api_tests/: test_api_text.py  test_api_text_result.py
api/tests/api_tests/cbr_tests/: conftest.py  test_cbr_bank_parser.py  test_cbr_broker_parser.py  test_cbr_insurance_parser.py  test_cbr_mfo_parser.py
api/tests/api_tests/cbr_tests/cassettes/: get_cbr_bank_file.yaml  get_cbr_bank_page.yaml
api/tests/html_pages/: cbr_page.html
db/: banki_ru_info.py  banks.py  database.py  models.py  reviews.py  sites_banks.py  sravni_bank_info.py  text_results.py
docs/: HSEUniversity.cls  abstract_header.tex  api_table.tex  carter.org  generate_openapi.py  ideas.org  library.bib  local-bib.bib  tz.aux  tz.tex  vkr.docx  vkr.org  (+1 more)
parser/: .env.example  Dockerfile  Makefile  Sravni.py  SravniReviews.py  api.py  banki_reviews.py  banki_ru_main.py  banki_ru_reviews.py  cbr_parser.py  database.py  main.py  pyproject.toml  requirements.txt  settings.py  sravni_main.py  sravni_reviews.py  tox.ini
parser/banki_ru/: banki_base_parser.py  broker_parser.py  database.py  insurance_parser.py  mfo_parser.py  news_parser.py  queries.py  requests_.py  reviews_parser.py  schemes.py  shemes.py
parser/banki_ru_reviews/: database.py  queries.py  reviews_parser.py  shemes.py
parser/common/: api.py  base_parser.py  database.py  requests_.py  schemes.py  settings.py  shemes.py
parser/database/: __init__.py  reviews_site.py
parser/irecommend_reviews/: irecommend.npy  queries.py  reviews_paresr.py
parser/parsers/: __init__.py  api.py  banki_ru_main.py  banki_ru_reviews.py  shemes.py  sravni_main.py  sravni_reviews.py
parser/parsers/banki_ru_reviews/: __init__.py  database.py  queries.py  reviews_parser.py
parser/parsers/sravni_reviews/: database.py  queries.py  shemes.py  sravni_reviews.py
parser/queue/: api.py  banki_ru.py  sravni_ru.py
parser/queues/: api.py  banki_ru.py  sravni_ru.py
parser/requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
parser/scripts/: banki_ru_reviews.py  cbr_parser.py  sravni_news.py  sravni_reviews.py
parser/shemes/: bank.py
parser/sravni_reviews/: base_parser.py  database.py  insurance_parser.py  mfo_parser.py  queries.py  schemes.py  sravni_reviews.py
parser/tests/: client.py  conftest.py  mixins.py  request_data.py  utils.py
parser/tests/bank_ru_tests/: banks_reviews_test.py  broker_reviews_test.py  conftest.py  insurance_reviews_test.py  mfo_reviews_test.py  news_test.py  queries_test.py  reviews_test.py
parser/tests/common/: api_test.py
parser/tests/sravni_tests/: banks_reviews_test.py  conftest.py  insurance_test.py  mfo_test.py  queries_test.py
parser/tests/vcr_cassettes/banki_ru/: bank_reviews_response.yaml  banki_banks_list.yaml  broker_page.yaml  get_broker_list_with_header.yaml  get_insurance_list.yaml  get_mfo_list.yaml  insurance_page.yaml  mfo_page.yaml  news_page.yaml  news_page_lenta.yaml
parser/tests/vcr_cassettes/sravni_ru/: bank_sravni_reviews_response.yaml  insurance_sravni_reviews_response.yaml  mfo_sravni_reviews_response.yaml  sravni_banks_list.yaml  sravni_insurance_list.yaml  sravni_mfo_list.yaml
parser/tests/vcr_cassettes/vk/: group_page.yaml  post_comments.yaml
parser/tests/vk_tests/: conftest.py  queries_test.py  vk_parser_test.py
parser/utils/: __init__.py  api.py  arg_parser.py  database.py  shemes.py
parser/vcr_cassettes/banki_ru/: get_broker_list_with_header.yaml
parser/vk_parser/: base_parser.py  comments_parser.py  database.py  other_industries_parser.py  queries.py
(+64 files in other folders)
