[tool.poetry]
name = "esganalysis"
version = "0.1.0"
description = ""
authors = ["Samoed <samoed.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
selenium = "^4.3.0"
beautifulsoup4 = "^4.11.1"
sqlmodel = "^0.0.6"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
types-requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
