[tool.poetry]
name = "esganalysis"
version = "0.1.0"
description = ""
authors = ["Samoed <samoed.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
selenium = "^4.3.0"
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "<=1.4.35" # github.com/tiangolo/sqlmodel/issues/315
sqlmodel = "^0.0.6"
tqdm = "^4.64.0"
schedule = "^1.1.0"
psycopg2 = "^2.9.3"
torch = "^1.12.0"
nltk = "^3.7"
transformers = "^4.20.1"
webdriver-manager = "^3.8.0"


[tool.poetry.dev-dependencies]
types-requests = "^2.28.0"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.961"
isort = "^5.10.1"
types-beautifulsoup4 = "^4.11.2"
types-selenium = "^3.141.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# https://github.com/tiangolo/sqlmodel/blob/main/pyproject.toml
[tool.mypy]
python_version = "3.10"
exclude = "models/ModelSentiment"
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.black]
line-length = 120
target-version = ['py310']
preview = true
exclude = '''
/(
    .git
  | .venv
  | pretrained_models
  | models
)/
'''
