[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Samoed <samoed.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.28.0"
fastapi = "^0.85.0"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.42" }
uvicorn = "^0.18.3"
SQLAlchemy-Utils = "^0.38.3"
beautifulsoup4 = "^4.11.1"
#  celery = "^5.2.7"
nltk = "^3.7"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
aiohttp = "^3.8.3"
psycopg2-binary = "^2.9.5"
schedule = "^1.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.991"
isort = "^5.10.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"}
#  celery-types = "^0.14.0"
pyupgrade = "^2.38.2"
types-beautifulsoup4 = "^4.11.6.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
setuptools = "^65.4.1"
pytest-mock = "^3.9.0"
coverage = "^6.5.0"
tox = "^3.26.0"
pytest-cov = "^4.0.0"
ConfigArgParse = "^1.5.3"
pytest-aiohttp = "^1.0.4"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# https://github.com/tiangolo/sqlmodel/blob/main/pyproject.toml
[tool.mypy]
python_version = "3.10"
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]
ignore_missing_imports = false
# --strict end
exclude = [
    "tests/"
]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy_utils",
    "nltk",
    "pandas",
    "schedule",

]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py310']
preview = true
exclude = '''
/(
    .git
  | .venv
  | notebooks
)/
'''

[tool.coverage.run]
source = ["app"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
