[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Samoed <samoed.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
selenium = "^4.4.3"
schedule = "^1.1.0"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"}
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
